# axiom-test

./: .env.example  .gitignore  Dockerfile  NEIGHBORHOOD_FEATURES.md  QUICK_REFERENCE.py  README.md  README_WINDOWS.md  VALIDATION_REPORT.py  __init__.py  docker-compose.yml  git_runner.sh  high_trust_neighborhood.csv  low_trust_neighborhood.csv  main_execution.py  medium_trust_neighborhood.csv  package.json  pyproject.toml  run_axiom.sh  score_csv.py  setup_windows.ps1  testfilegenrator.py
api/: __init__.py  celery_app.py  main.py  schemas.py
axiom_merchant_sandbox/: README.md  gst_resolver.py  out.txt  out2.txt  out3.txt  out4.txt  out5.txt  resolve_merchants.py  run_axiom_stateless.py  score_csv.py  test_data1.csv
examples/: README.md  high_trust_neighborhood.csv  integration_example.py  landlord_high.csv  landlord_low.csv  landlord_med.csv  low_trust_neighborhood.csv  medium_trust_neighborhood.csv  parent_high.csv  parent_low.csv  parent_med.csv  reputation_nodes.py
frontend/: README.md  install-node.ps1  package-lock.json  package.json  start-frontend.ps1  tsconfig.json
graph/: __init__.py  gineconv_model.py  gru_temporal.py  kdtree_enricher.py  st_pignn.py  training_engine.py  trust_graph.py
ingestion/: __init__.py  aa_client.py  rent_verifier.py  statement_ingest.py  upi_parser.py  utility_tracker.py
scoring/: __init__.py  baseline_score.py  ensemble.py  fraud_detector.py  neighborhood_integration.py  shap_explainer.py  trust_transitive.py
scratch/: check_health.py  redis_check.py  run_test_matrix.py
services/: ai_advisor.py  explainability_service.py  llm_recommender.py  ocr_service.py  sheerid_service.py
storage/: __init__.py  events.py  models.py
tasks/: ml_worker.py
tests/: __init__.py  conftest.py  test_api.py  test_graph.py  (+4 more)
(+25 files in other folders)
