[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "axiom-credit"
version = "1.0.0"
description = "Production-grade credit scoring platform for thin-file users in India using Account Aggregator data"
authors = [{name = "Axiom Engineering Team"}]
license = "MIT"
requires-python = "^3.11"

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.24", "black>=24.1", "ruff>=0.3"]

[tool.poetry]
name = "axiom-credit"
version = "1.0.0"
description = "Axiom credit scoring platform for thin-file users in India"
authors = ["Axiom Engineering Team <engineering@axiom.credit>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = {version = "^0.30", extras = ["standard"]}
torch = "^2.3"
torch-geometric = "^2.5"
xgboost = "^2.0"
catboost = "^1.2"
shap = "^0.45"
networkx = "^3.3"
scipy = "^1.13"
httpx = "^0.27"
pydantic = "^2.7"
sqlalchemy = "^2.0"
alembic = "^1.13"
motor = "^3.4"
redis = "^5.0"
python-dotenv = "^1.0"
pytz = "^2024.1"
cryptography = "^42.0"
pyjwt = "^2.8"
logging-json = "^0.6"
celery = "^5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.24"
pytest-cov = "^4.1"
black = "^24.1"
ruff = "^0.3"
mypy = "^1.8"
isort = "^5.13"
faker = "^22.2"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "ANN"]
ignore = ["ANN101"]  # self annotations

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=. --cov-report=html"
